fixed img stretching issue

--- a/client/src/pages/Discover/discover.css
+++ b/client/src/pages/Discover/discover.css
@@ -78,7 +78,8 @@
 
 .game-thumbnail {
   width: 25%;
-  height: auto;
+  object-fit: contain;
+  /* height: auto; */
   border-radius: 5px;
 }
 
